// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoRemoveButton component: should be rendered correctly 1`] = `
<DefaultButton
  busy={false}
  className="todo-remove-button"
  disabled={false}
  extension="narrow"
  iconOnly={true}
  label="Delete"
  onClick={[Function]}
  theme="danger"
>
  <Icon
    icon="trash"
    spin={false}
  />
</DefaultButton>
`;

exports[`TodoRemoveButton component: should handle isWorking correctly (display spinner) 1`] = `
<DefaultButton
  busy={true}
  className="todo-remove-button"
  disabled={true}
  extension="narrow"
  iconOnly={true}
  label="Delete"
  onClick={[Function]}
  theme="danger"
/>
`;
